--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.png">
     <title>TailwindVue</title>
+    <script src="https://kit.fontawesome.com/a2aaa4324d.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>
