--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-full">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +8,7 @@
     <title>TailwindVue</title>
     <script src="https://kit.fontawesome.com/a2aaa4324d.js" crossorigin="anonymous"></script>
   </head>
-  <body>
+  <body class="h-full">
     <noscript>
       <strong>We're sorry but TailwindVue doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
