Improve site meta and icons

--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,75 @@
 <!DOCTYPE html>
 <html lang="en" class="min-h-screen">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.png">
-    <title>TailwindVue</title>
+    <meta name="description"
+          content="Tailwind Vue is a customisable library of Vue.js components made with Tailwind CSS.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#4fc08d">
+    <meta itemprop="name" content="Tailwind Vue">
+    <meta itemprop="description"
+          content="Tailwind Vue is a customisable library of beautiful components made with Vue.js and Tailwind CSS.">
+    <meta itemprop="image" content="">
+
+    <!--  Open Graph Meta  -->
+    <meta property="og:type" content="article">
+    <meta property="og:title" content="Tailwind Vue">
+    <meta property="og:description"
+          content="Tailwind Vue is a customisable library of beautiful components made with Vue.js and Tailwind CSS.">
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Tailwind Vue"/>
+    <meta property="og:image" content="https://public.tailwindvue.com/images/banners/open-graph.png">
+
+    <!--  Twitter Meta  -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Tailwind Vue">
+    <meta name="twitter:description"
+          content="Tailwind Vue is a customisable library of beautiful components made with Vue.js and Tailwind CSS.">
+    <meta name="twitter:image" content="https://public.tailwindvue.com/images/banners/twitter.png">
+
+    <!-- Apple   -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link rel="apple-touch-icon" sizes="57x57" href="<%= BASE_URL %>images/icons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="<%= BASE_URL %>images/icons/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="<%= BASE_URL %>images/icons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="<%= BASE_URL %>images/icons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="<%= BASE_URL %>images/icons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="<%= BASE_URL %>images/icons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="<%= BASE_URL %>images/icons/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="<%= BASE_URL %>images/icons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>images/icons/apple-icon-180x180.png">
+
+    <!--  Icons  -->
+    <link rel="icon" type="image/png" href="<%= BASE_URL %>images/icons/icon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>images/icons/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>images/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="<%= BASE_URL %>images/icons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="<%= BASE_URL %>images/icons/favicon-192x192.png">
+
+    <!--  Microsoft Icons  -->
+    <meta name="msapplication-TileImage" content="<%= BASE_URL %>images/icons/microsoft-icon-144x144.png">
+    <meta name="msapplication-TileColor" content="#4fc08d">
+
+    <!--  Config Files  -->
+    <meta name="msapplication-config" content="browserconfig.xml">
+    <link rel="manifest" href="<%= BASE_URL %>manifest.json">
+
+    <!--  Fonts  -->
     <script src="https://kit.fontawesome.com/a2aaa4324d.js" crossorigin="anonymous"></script>
-  </head>
-  <body class="min-h-screen">
-    <noscript>
-      <strong>We're sorry but TailwindVue doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+    <title>TailwindVue</title>
+
+</head>
+<body class="min-h-screen">
+<noscript>
+    <strong>We're sorry but TailwindVue doesn't work properly without JavaScript enabled. Please enable it to
+        continue.</strong>
+</noscript>
+<div id="app"></div>
+<!-- built files will be auto injected -->
+</body>
 </html>
